--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "firebase": "^12.5.0",
+    "html5-qrcode": "^2.3.8",
     "next": "16.0.1",
-    "qr-scanner": "^1.4.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-qr-code": "^2.0.18",
