--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^12.5.0",
     "html5-qrcode": "^2.3.8",
-    "next": "16.0.1",
+    "next": "^15.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-qr-code": "^2.0.18",
