fix: remove --webpack from build script for Next.js 15

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "talmzo-dashboard",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+ "scripts": {
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
+  
   "dependencies": {
     "firebase": "^12.5.0",
     "html5-qrcode": "^2.3.8",
